<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>brash_demo</name>
  <version>0.0.1</version>
  <description>demo respository for brash project</description>
  <maintainer email="swhart@traclabs.com">swhart</maintainer>
  <license>TODO: License declaration</license>

  <depend>rclpy</depend>
  <depend>rcl_interfaces</depend>
  <depend>cfe_msgs</depend>
  <depend>sensor_msgs</depend>

  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>

</package>
